laba2_Sonar2